use meta handler in :bind :bind* keywords

--- a/README.org
+++ b/README.org
@@ -1108,36 +1108,36 @@ see more in ~bink-keys~ info.
          ("M-o" . isearch-moccur)
          ("M-O" . isearch-moccur-all))
        (progn
-         (autoload #'moccur "color-moccur" nil t)
-         (autoload #'isearch-moccur "color-moccur" nil t)
-         (autoload #'isearch-moccur-all "color-moccur" nil t)
-         (bind-keys :package color-moccur ("M-s O" . moccur))
-         (bind-keys :package color-moccur ("M-o" . isearch-moccur))
-         (bind-keys :package color-moccur ("M-O" . isearch-moccur-all))))
+         (autoload (function moccur) "color-moccur" nil t)
+         (autoload (function isearch-moccur) "color-moccur" nil t)
+         (autoload (function isearch-moccur-all) "color-moccur" nil t)
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-s O" . moccur)))
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-o" . isearch-moccur)))
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-O" . isearch-moccur-all)))))
 
       ((leaf color-moccur
          :bind (("M-s O" . moccur)
                 ("M-o" . isearch-moccur)
                 ("M-O" . isearch-moccur-all)))
        (progn
-         (autoload #'moccur "color-moccur" nil t)
-         (autoload #'isearch-moccur "color-moccur" nil t)
-         (autoload #'isearch-moccur-all "color-moccur" nil t)
-         (bind-keys :package color-moccur ("M-s O" . moccur))
-         (bind-keys :package color-moccur ("M-o" . isearch-moccur))
-         (bind-keys :package color-moccur ("M-O" . isearch-moccur-all))))
+         (autoload (function moccur) "color-moccur" nil t)
+         (autoload (function isearch-moccur) "color-moccur" nil t)
+         (autoload (function isearch-moccur-all) "color-moccur" nil t)
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-s O" . moccur)))
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-o" . isearch-moccur)))
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-O" . isearch-moccur-all)))))
 
       ((leaf color-moccur
          :bind (("M-s O" . moccur)
                 (("M-o" . isearch-moccur)
                  (("M-O" . isearch-moccur-all)))))
        (progn
-         (autoload #'moccur "color-moccur" nil t)
-         (autoload #'isearch-moccur "color-moccur" nil t)
-         (autoload #'isearch-moccur-all "color-moccur" nil t)
-         (bind-keys :package color-moccur ("M-s O" . moccur))
-         (bind-keys :package color-moccur ("M-o" . isearch-moccur))
-         (bind-keys :package color-moccur ("M-O" . isearch-moccur-all))))
+         (autoload (function moccur) "color-moccur" nil t)
+         (autoload (function isearch-moccur) "color-moccur" nil t)
+         (autoload (function isearch-moccur-all) "color-moccur" nil t)
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-s O" . moccur)))
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-o" . isearch-moccur)))
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-O" . isearch-moccur-all)))))
 
       ((leaf color-moccur
          :bind (("M-s O" . moccur)
@@ -1145,12 +1145,12 @@ see more in ~bink-keys~ info.
                  ("M-o" . isearch-moccur)
                  ("M-O" . isearch-moccur-all))))
        (progn
-         (autoload #'moccur "color-moccur" nil t)
-         (autoload #'isearch-moccur "color-moccur" nil t)
-         (autoload #'isearch-moccur-all "color-moccur" nil t)
-         (bind-keys :package color-moccur ("M-s O" . moccur))
-         (bind-keys :map isearch-mode-map :package color-moccur ("M-o" . isearch-moccur))
-         (bind-keys :map isearch-mode-map :package color-moccur ("M-O" . isearch-moccur-all))))
+         (autoload (function moccur) "color-moccur" nil t)
+         (autoload (function isearch-moccur) "color-moccur" nil t)
+         (autoload (function isearch-moccur-all) "color-moccur" nil t)
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-s O" . moccur)))
+         (leaf-meta-handler-bind color-moccur (:map isearch-mode-map :package color-moccur ("M-o" . isearch-moccur)))
+         (leaf-meta-handler-bind color-moccur (:map isearch-mode-map :package color-moccur ("M-O" . isearch-moccur-all)))))
 
       ((leaf color-moccur
          :bind (("M-s O" . moccur)
@@ -1159,12 +1159,12 @@ see more in ~bink-keys~ info.
                  ("M-o" . isearch-moccur)
                  ("M-O" . isearch-moccur-all))))
        (progn
-         (autoload #'moccur "color-moccur" nil t)
-         (autoload #'isearch-moccur "color-moccur" nil t)
-         (autoload #'isearch-moccur-all "color-moccur" nil t)
-         (bind-keys :package color-moccur ("M-s O" . moccur))
-         (bind-keys :map isearch-mode-map :package isearch ("M-o" . isearch-moccur))
-         (bind-keys :map isearch-mode-map :package isearch ("M-O" . isearch-moccur-all))))))
+         (autoload (function moccur) "color-moccur" nil t)
+         (autoload (function isearch-moccur) "color-moccur" nil t)
+         (autoload (function isearch-moccur-all) "color-moccur" nil t)
+         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-s O" . moccur)))
+         (leaf-meta-handler-bind color-moccur (:map isearch-mode-map :package isearch ("M-o" . isearch-moccur)))
+         (leaf-meta-handler-bind color-moccur (:map isearch-mode-map :package isearch ("M-O" . isearch-moccur-all)))))))
 #+end_src
 
 * Information
