--- a/README.org
+++ b/README.org
@@ -430,13 +430,6 @@ The value set to ~custom-face~ should also be quoed to emphasize uniformity as ~
          (custom-set-variables
           '(leaf-backend-ensure 'feather "Customized with leaf in leaf block")
           '(leaf-backend-bind 'bind-key "Customized with leaf in leaf block")
-          '(leaf-backend-bind* 'bind-key "Customized with leaf in leaf block"))))
-
-      ((leaf leaf
-         :custom ((leaf-backend-bind leaf-backend-bind*) . 'bind-key))
-       (progn
-         (custom-set-variables
-          '(leaf-backend-bind 'bind-key "Customized with leaf in leaf block")
           '(leaf-backend-bind* 'bind-key "Customized with leaf in leaf block"))))))
 
   (cort-deftest-with-macroexpand leaf/custom-face
@@ -444,15 +437,7 @@ The value set to ~custom-face~ should also be quoed to emphasize uniformity as ~
          :custom-face
          (eruby-standard-face . '((t (:slant italic)))))
        (progn
-         (custom-set-faces '(eruby-standard-face (((t (:slant italic))))))))
-
-      ((leaf eruby-mode
-         :custom-face
-         ((default eruby-standard-face) . '((t (:slant italic)))))
-       (progn
-         (custom-set-faces
-          '(default (((t (:slant italic)))))
-          '(eruby-standard-face (((t (:slant italic))))))))))
+         (custom-set-faces '(eruby-standard-face (((t (:slant italic))))))))))
 #+end_src
 
 ** :pre-setq, :setq, :setq-default keywords
@@ -493,32 +478,17 @@ or set the evaluation result of some S expression to variable.
        (progn
          (require 'leaf)
          (setq leaf-backend-bind 'bind-key)
-         (setq leaf-backend-bind* 'bind-key)))
-
-      ((leaf leaf
-         :setq (leaf-backend-bind leaf-backend-bind* . 'bind-key)
-         :require t)
-       (progn
-         (require 'leaf)
-         (setq leaf-backend-bind 'bind-key)
-         (setq leaf-backend-bind* 'bind-key)))
-
-      ((leaf leaf
-         :setq ((leaf-backend-bind leaf-backend-bind*) . 'bind-key)
-         :require t)
-       (progn
-         (require 'leaf)
-         (setq leaf-backend-bind 'bind-key)
          (setq leaf-backend-bind* 'bind-key)))))
 
   (cort-deftest-with-macroexpand leaf/pre-setq
-    '(((leaf leaf
-         :pre-setq ((leaf-backend-bind leaf-backend-bind*) . 'bind-key)
-         :require t)
-       (progn
-         (setq leaf-backend-bind 'bind-key)
-         (setq leaf-backend-bind* 'bind-key)
-         (require 'leaf)))))
+    '(((leaf alloc
+       :pre-setq `((gc-cons-threshold . ,(* 512 1024 1024))
+                   (garbage-collection-messages . t))
+       :require t)
+     (progn
+       (setq gc-cons-threshold 536870912)
+       (setq garbage-collection-messages t)
+       (require 'alloc)))))
 
   (cort-deftest-with-macroexpand leaf/setq-default
     '(((leaf alloc
@@ -528,8 +498,7 @@ or set the evaluation result of some S expression to variable.
        (progn
          (require 'alloc)
          (setq-default gc-cons-threshold 536870912)
-         (setq-default garbage-collection-messages t)))
-      ))
+         (setq-default garbage-collection-messages t)))))
 #+end_src
 
 * Configure list keywords
@@ -553,23 +522,7 @@ If you want to specify major-mode, pass dotted pair value.
        (progn
          (autoload #'web-mode "web-mode" nil t)
          (add-to-list 'auto-mode-alist '("\\.js\\'" web-mode))
-         (add-to-list 'auto-mode-alist '("\\.p?html?\\'" web-mode))))
-
-      ((leaf web-mode
-         :mode (("\\.js\\'" "\\.p?html?\\'") . web-mode))
-       (progn
-         (autoload #'web-mode "web-mode" nil t)
-         (add-to-list 'auto-mode-alist '("\\.js\\'" web-mode))
-         (add-to-list 'auto-mode-alist '("\\.p?html?\\'" web-mode))))
-
-      ((leaf web-mode
-         :mode (("\\.phtml?\\'" "\\.html?\\'" . web-html-mode) "\\.js\\'" . web-mode))
-       (progn
-         (autoload #'web-html-mode "web-mode" nil t)
-         (autoload #'web-mode "web-mode" nil t)
-         (add-to-list 'auto-mode-alist '("\\.phtml?\\'" web-html-mode))
-         (add-to-list 'auto-mode-alist '("\\.html?\\'" web-html-mode))
-         (add-to-list 'auto-mode-alist '("\\.js\\'" web-mode))))))
+         (add-to-list 'auto-mode-alist '("\\.p?html?\\'" web-mode))))))
 
   (cort-deftest-with-macroexpand leaf/interpreter
     '(((leaf ruby-mode
@@ -595,30 +548,7 @@ If you want to specify major-mode, pass dotted pair value.
        (progn
          (autoload #'web-mode "web-mode" nil t)
          (add-to-list 'interpreter-mode-alist '("js" web-mode))
-         (add-to-list 'interpreter-mode-alist '("p?html?" web-mode))))
-
-      ((leaf web-mode
-         :interpreter ("js" ("p?html?")))
-       (progn
-         (autoload #'web-mode "web-mode" nil t)
-         (add-to-list 'interpreter-mode-alist '("js" web-mode))
-         (add-to-list 'interpreter-mode-alist '("p?html?" web-mode))))
-
-      ((leaf web-mode
-         :interpreter (("js" "p?html?") . web-mode))
-       (progn
-         (autoload #'web-mode "web-mode" nil t)
-         (add-to-list 'interpreter-mode-alist '("js" web-mode))
-         (add-to-list 'interpreter-mode-alist '("p?html?" web-mode))))
-
-      ((leaf web-mode
-         :interpreter (("phtml?" "html?" . web-html-mode) "js" . web-mode))
-       (progn
-         (autoload #'web-html-mode "web-mode" nil t)
-         (autoload #'web-mode "web-mode" nil t)
-         (add-to-list 'interpreter-mode-alist '("phtml?" web-html-mode))
-         (add-to-list 'interpreter-mode-alist '("html?" web-html-mode))
-         (add-to-list 'interpreter-mode-alist '("js" web-mode))))))
+         (add-to-list 'interpreter-mode-alist '("p?html?" web-mode))))))
 #+end_src
 
 ** :magic, :magic-fallback keywords
@@ -648,30 +578,7 @@ If you want to specify major-mode, pass dotted pair value.
        (progn
          (autoload #'web-mode "web-mode" nil t)
          (add-to-list 'magic-mode-alist '("js" web-mode))
-         (add-to-list 'magic-mode-alist '("p?html?" web-mode))))
-
-      ((leaf web-mode
-         :magic ("js" ("p?html?")))
-       (progn
-         (autoload #'web-mode "web-mode" nil t)
-         (add-to-list 'magic-mode-alist '("js" web-mode))
-         (add-to-list 'magic-mode-alist '("p?html?" web-mode))))
-
-      ((leaf web-mode
-         :magic (("js" "p?html?") . web-mode))
-       (progn
-         (autoload #'web-mode "web-mode" nil t)
-         (add-to-list 'magic-mode-alist '("js" web-mode))
-         (add-to-list 'magic-mode-alist '("p?html?" web-mode))))
-
-      ((leaf web-mode
-         :magic (("phtml?" "html?" . web-html-mode) "js" . web-mode))
-       (progn
-         (autoload #'web-html-mode "web-mode" nil t)
-         (autoload #'web-mode "web-mode" nil t)
-         (add-to-list 'magic-mode-alist '("phtml?" web-html-mode))
-         (add-to-list 'magic-mode-alist '("html?" web-html-mode))
-         (add-to-list 'magic-mode-alist '("js" web-mode))))))
+         (add-to-list 'magic-mode-alist '("p?html?" web-mode))))))
 
   (cort-deftest-with-macroexpand leaf/magic-fallback
     '(((leaf pdf-tools
@@ -695,23 +602,7 @@ If you want to specify major-mode, pass dotted pair value.
        (progn
          (autoload #'web-mode "web-mode" nil t)
          (add-to-list 'magic-fallback-mode-alist '("js" web-mode))
-         (add-to-list 'magic-fallback-mode-alist '("p?html?" web-mode))))
-
-      ((leaf web-mode
-         :magic-fallback (("js" "p?html?") . web-mode))
-       (progn
-         (autoload #'web-mode "web-mode" nil t)
-         (add-to-list 'magic-fallback-mode-alist '("js" web-mode))
-         (add-to-list 'magic-fallback-mode-alist '("p?html?" web-mode))))
-
-      ((leaf web-mode
-         :magic-fallback (("phtml?" "html?" . web-html-mode) "js" . web-mode))
-       (progn
-         (autoload #'web-html-mode "web-mode" nil t)
-         (autoload #'web-mode "web-mode" nil t)
-         (add-to-list 'magic-fallback-mode-alist '("phtml?" web-html-mode))
-         (add-to-list 'magic-fallback-mode-alist '("html?" web-html-mode))
-         (add-to-list 'magic-fallback-mode-alist '("js" web-mode))))))
+         (add-to-list 'magic-fallback-mode-alist '("p?html?" web-mode))))))
 #+end_src
 
 ** :hook keyword
@@ -738,23 +629,7 @@ If you want to specify major-mode, pass dotted pair value.
          (autoload #'ace-jump-mode "ace-jump-mode" nil t)
          (autoload #'my-ace-jump-mode "ace-jump-mode" nil t)
          (add-hook 'cc-mode-hook #'ace-jump-mode)
-         (add-hook 'prog-mode-hook #'my-ace-jump-mode)))
-
-      ((leaf ace-jump-mode
-         :hook ((cc-mode-hook prog-mode-hook) . my-ace-jump-mode))
-       (progn
-         (autoload #'my-ace-jump-mode "ace-jump-mode" nil t)
-         (add-hook 'cc-mode-hook #'my-ace-jump-mode)
-         (add-hook 'prog-mode-hook #'my-ace-jump-mode)))
-
-      ((leaf ace-jump-mode
-         :hook ((cc-mode-hook prog-mode-hook . ace-jump-mode) isearch-mode . my-ace-jump-mode))
-       (progn
-         (autoload #'ace-jump-mode "ace-jump-mode" nil t)
-         (autoload #'my-ace-jump-mode "ace-jump-mode" nil t)
-         (add-hook 'cc-mode-hook #'ace-jump-mode)
-         (add-hook 'prog-mode-hook #'ace-jump-mode)
-         (add-hook 'isearch-mode #'my-ace-jump-mode)))))
+         (add-hook 'prog-mode-hook #'my-ace-jump-mode)))))
 #+end_src
 ** :load-path keyword
 *Unlike use-package*, you must specify the full path.
@@ -982,26 +857,7 @@ This is usually done by a ~declare-function~ and an empty ~defvar~, and ~leaf~ p
        (progn
          (declare-function leaf "leaf")
          (declare-function leaf-normalize-plist "leaf")
-         (declare-function leaf-merge-dupkey-values-plist "leaf")))
-
-      ((leaf leaf
-         :defun (lbrowser-open lbrowser-close . leaf-browser))
-       (progn
-         (declare-function lbrowser-open "leaf-browser")
-         (declare-function lbrowser-close "leaf-browser")))
-
-      ((leaf leaf
-         :defun ((lbrowser-open (lbrowser-close) . leaf) . leaf-browser))
-       (progn
-         (declare-function lbrowser-open "leaf")
-         (declare-function lbrowser-close "leaf")))
-
-      ((leaf leaf
-         :defun ((lbrowser-open (lbrowser-close) . leaf) leaf-asdf . leaf-browser))
-       (progn
-         (declare-function lbrowser-open "leaf")
-         (declare-function lbrowser-close "leaf")
-         (declare-function leaf-asdf "leaf-browser")))))
+         (declare-function leaf-merge-dupkey-values-plist "leaf")))))
 
   (cort-deftest-with-macroexpand leaf/defvar
     '(((leaf leaf
@@ -1119,18 +975,6 @@ see more in ~bink-keys~ info.
          :bind (("M-s O" . moccur)
                 ("M-o" . isearch-moccur)
                 ("M-O" . isearch-moccur-all)))
-       (progn
-         (autoload (function moccur) "color-moccur" nil t)
-         (autoload (function isearch-moccur) "color-moccur" nil t)
-         (autoload (function isearch-moccur-all) "color-moccur" nil t)
-         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-s O" . moccur)))
-         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-o" . isearch-moccur)))
-         (leaf-meta-handler-bind color-moccur (:package color-moccur ("M-O" . isearch-moccur-all)))))
-
-      ((leaf color-moccur
-         :bind (("M-s O" . moccur)
-                (("M-o" . isearch-moccur)
-                 (("M-O" . isearch-moccur-all)))))
        (progn
          (autoload (function moccur) "color-moccur" nil t)
          (autoload (function isearch-moccur) "color-moccur" nil t)
