--- a/README.org
+++ b/README.org
@@ -265,6 +265,28 @@ you can also use ~:ensure~ as ~:package~.
          (leaf-handler-package leaf leaf-key nil)
          (leaf-handler-package leaf leaf-browser nil)
          (leaf-init)))))
+
+  (cort-deftest-with-macroexpand leaf/handler-package
+    '(((leaf macrostep :ensure t)
+       (prog1 'macrostep
+         (leaf-handler-package macrostep macrostep nil))
+
+       ((leaf-handler-package macrostep macrostep nil)
+        (unless
+            (package-installed-p 'macrostep)
+          (condition-case err
+              (progn
+                (unless (assoc 'macrostep package-archive-contents)
+                  (package-refresh-contents))
+                (package-install 'macrostep))
+            (error
+             (condition-case err
+                 (progn
+                   (package-refresh-contents)
+                   (package-install 'macrostep))
+               (error
+                (leaf-error "In `macrostep' block, failed to :package of macrostep.  Error msg: %s"
+                            (error-message-string err)))))))))))
 #+end_src
 
 ** :preface, :init, :config keywords
